03-tweethub-services.yml
apiVersion: v1
kind: Service
metadata:
  name: twitter-admin-ui

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: twitter-admin-ui
