03-tweethub-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-admin-ui-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twitter-admin-ui
            port:
              name: web
